Adding some code for know how to work with geocoder by address

--- a/rata_comparti_el_wifi/app/assets/stylesheets/map.css
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/map.css
@@ -3,5 +3,16 @@ body,
 #map {
     width: 99.5%;
     height: 99.5%;
-    border:0%
+    padding-top: 2%;
+    padding-left: 0.5%;
+    border:0%;
+}
+
+#main-bar{
+	background-color: #6F5499
+}
+
+#contextMenu {
+    position: absolute;
+    display:none;
 }
