--- a/rata_comparti_el_wifi/app/views/mapas/_form.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/_form.html.haml
@@ -7,5 +7,10 @@
         %li= msg
   
 
+  .field
+    = f.label :address
+    %br
+    = f.text_field :address
+        
   .actions
     = f.submit
