--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -1,1 +1,19 @@
-#map
+#main-bar{ :class=>"navbar navbar-inverse navbar-fixed-top", :role=>"navigation"}
+  %div{ :class=>"container"}
+    %div{ :class=>"navbar-header"}
+      %button{ :type=>"button", :class=>"navbar-toggle"}
+        %span{:class=>"sr-only", :value=>"Toggle navigation"}
+      %a{ :class=>"navbar-brand", :href=>"#"}Compartir esta bueno
+    %div{:class=> ["navbar-collapse", "collapse"]}
+      %form{ :class=>["navbar-form", "navbar-right"], :role=>"form"}
+        %div{ :class=>"form-group"}
+          %input{ :id=>"busca_router", :class=>"form-control", :type=>"search", :placeholder=>"Encontrá tu router"}
+        #lock_up_location{ :type=>"submit", :class=>"btn btn-info"} Podés buscar por direccion
+
+#map{ :class=>"container"}
+
+#contextMenu{:class=>["dropdown", "clearfix"]}
+  %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
+    %li
+      %a{:tabindex=>"-1", :href=>"#"}Action
+      %a{:tabindex=>"-1", :href=>"#"}Action
