--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -14,6 +14,9 @@
 
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
-    %li
-      %a{:tabindex=>"-1", :href=>"#"}Action
-      %a{:tabindex=>"-1", :href=>"#"}Action
+    %li{:class=>"active", :role=>"presentation"}
+      %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Compartir router
+    %li{:role=>"presentation"}
+      %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
+    %li{:role=>"presentation"}  
+      %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
