--- a/rata_comparti_el_wifi/app/assets/stylesheets/map.css
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/map.css
@@ -3,8 +3,17 @@ body,
 #map {
     width: 99.5%;
     height: 99.5%;
-    padding-top: 2%;
-    padding-left: 0.5%;
+    border:0%;
+}
+.jumbotron{
+    width: 99.5% ;
+    height: 99.5%;
+    border:0%;
+}
+
+.container{
+    width: 99.5% ;
+    height: 99.5%;
     border:0%;
 }
 
