--- a/rata_comparti_el_wifi/app/views/layouts/application.html.erb
+++ b/rata_comparti_el_wifi/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Compartir esta bueno</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+	<%= tag 'meta', :charset=>"utf-8"%>
+	<%= tag 'meta' , :name=> "viewport",  :content=> "width=device-width, initial-scale=1"%>
+	<title>Compartir esta bueno</title>
+	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 
