--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -9,8 +9,9 @@
         %div{ :class=>"form-group"}
           %input{ :id=>"busca_router", :class=>"form-control", :type=>"search", :placeholder=>"Encontrá tu router"}
         #lock_up_location{ :type=>"submit", :class=>"btn btn-info"} Podés buscar por direccion
-
-#map{ :class=>"container"}
+.jumbotron
+  #container_map{ :class=>"container"}
+    #map
 
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
