--- a/rata_comparti_el_wifi/app/assets/stylesheets/map.css
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/map.css
@@ -1,5 +1,5 @@
 html, 
-body, 
+body,
 #map {
     width: 99.5%;
     height: 99.5%;
@@ -9,6 +9,10 @@ body,
     width: 99.5% ;
     height: 99.5%;
     border:0%;
+    padding-top: 10%;
+    padding-bottom: 0%;
+    padding-left: 0%;
+    padding-right: 0%;
 }
 
 .container{
