--- a/rata_comparti_el_wifi/app/assets/stylesheets/map.css
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/map.css
@@ -1,5 +1,6 @@
 html, 
 body,
+
 #map {
     width: 99.5%;
     height: 99.5%;
@@ -9,16 +10,17 @@ body,
     width: 99.5% ;
     height: 99.5%;
     border:0%;
-    padding-top: 10%;
-    padding-bottom: 0%;
+    padding-top: 2%;
+    padding-bottom: 0% !important;
     padding-left: 0%;
-    padding-right: 0%;
+    padding-right: 0% ;
 }
 
 .container{
     width: 99.5% ;
     height: 99.5%;
     border:0%;
+    padding-bottom: 0% !important;
 }
 
 #main-bar{
@@ -28,4 +30,8 @@ body,
 #contextMenu {
     position: absolute;
     display:none;
+}
+
+#main-bar{
+
 }
