--- a/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  background-color: #6F5499
+  background-color: #6F5499;
+  padding-top: 8%;
 }
 
 .form-signin {
