--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -18,7 +18,7 @@
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
     %li{:class=>"active", :role=>"presentation"}
-      %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Compartir router
+      %a{:tabindex=>"-1", :role=>"menuitem", :href=> new_node_path }Compartir router
     %li{:role=>"presentation"}
       %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
     %li{:role=>"presentation"}  
