add slide effect to load page

--- a/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
@@ -3,7 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   background-color: #6F5499;
-  padding-top: 8%;
+}
+
+
+#main_container{
+    padding-top: 8%
 }
 
 .form-signin {
