update - improve transitions between pages

--- a/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
+++ b/rata_comparti_el_wifi/app/assets/stylesheets/nodes.css.scss
@@ -5,9 +5,8 @@ body {
   background-color: #6F5499;
 }
 
-
 #main_container{
-    padding-top: 8%
+    padding-top: 8% !important
 }
 
 .form-signin {
