--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -6,7 +6,7 @@
         %span{:class=>"icon-bar"}
         %span{:class=>"icon-bar"}
         %span{:class=>"icon-bar"}
-      %a{ :class=>"navbar-brand", :href=>"#"}Compartir esta bueno
+      %a{ :id=> "back_to_root", :class=>"navbar-brand", :href=> root_path }Compartir esta bueno
     %div{:class=> ["navbar-collapse", "collapse"]}
       %form{ :class=>["navbar-form", "navbar-right"], :role=>"form"}
         %div{ :class=>"form-group"}
@@ -14,7 +14,7 @@
         #lock_up_location{ :type=>"submit", :class=>"btn btn-info"} Podés buscar por direccion
 
 #map
-
+#bodyContent
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
     %li{:class=>"active", :role=>"presentation"}
@@ -23,5 +23,3 @@
       %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
     %li{:role=>"presentation"}  
       %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
-
-#bodyContent
