Add the to get all nodes when render the map

--- a/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
+++ b/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
@@ -1,4 +1,4 @@
-.container
+#main_container{ :class=>"container"}
   #node{:class => "form-signin"}
     = form_for(@node) do |f|
       - if @node.errors.any?
