Fix the way to save a Node:{location: [:address]}, {router: [:ip, :mac, :essid, :password]} and obtain params from view

--- a/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
+++ b/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
@@ -4,4 +4,10 @@
       = f.fields_for @node.location do | location |
         = location.text_field :address, { :class=>"form-control", :placeholder=>"Address"}
 
+      = f.fields_for @node.router do | router |
+        = router.text_field :ip, { :class=>"form-control", :placeholder=>"ip"}
+        = router.text_field :mac, { :class=>"form-control", :placeholder=>"mac"}
+        = router.text_field :essid, { :class=>"form-control", :placeholder=>"essid"}
+        = router.text_field :password, { :class=>"form-control", :placeholder=>"password", :type => "password"}
+
       = f.submit  'Guardar', {:class=>"btn btn-lg btn-primary btn-block", :type=>"submit"}
