--- a/rata_comparti_el_wifi/app/views/layouts/application.html.erb
+++ b/rata_comparti_el_wifi/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
 	<%= tag 'meta', :charset=>"utf-8"%>
 	<%= tag 'meta' , :name=> "viewport",  :content=> "width=device-width, initial-scale=1"%>
+	<%= favicon_link_tag 'favicon.ico' %>
 	<title>Compartir esta bueno</title>
 	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
