fix => lose focus on {domain}/nodes/new when is loaded from index with ajax:load

--- a/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
+++ b/rata_comparti_el_wifi/app/views/nodes/_form.html.haml
@@ -8,6 +8,6 @@
         = router.text_field :ip, { :class=>"form-control", :placeholder=>"ip"}
         = router.text_field :mac, { :class=>"form-control", :placeholder=>"mac"}
         = router.text_field :essid, { :class=>"form-control", :placeholder=>"essid"}
-        = router.text_field :password, { :class=>"form-control", :placeholder=>"password", :type => "password"}
+        = router.text_field :password, { :class=>"form-control", :placeholder=>"password"}
 
       = f.submit  'Guardar', {:class=>"btn btn-lg btn-primary btn-block", :type=>"submit"}
