--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -17,7 +17,7 @@
 
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
-    %li{:class=>"active", :role=>"presentation"}
+    %li{:role=>"presentation"}
       %a{ :id=>"new_node", :tabindex=>"-1", :role=>"menuitem", :href=> new_node_path }Compartir router
     %li{:role=>"presentation"}
       %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
@@ -37,5 +37,5 @@
         #address
         #router
       #modal_footer{ :class=>"modal-footer"}
-        %button{ :type=>"button", :class=>"btn btn-default", :data => { :dismiss=>"modal" } }
+        %button{ :type=>"button", :class=>"btn btn-info", :data => { :dismiss=>"modal" } }
           Close
