--- a/rata_comparti_el_wifi/app/views/mapas/index.html.haml
+++ b/rata_comparti_el_wifi/app/views/mapas/index.html.haml
@@ -6,19 +6,19 @@
         %span{:class=>"icon-bar"}
         %span{:class=>"icon-bar"}
         %span{:class=>"icon-bar"}
-      %a{ :id=> "back_to_root", :class=>"navbar-brand", :href=> root_path }Compartir esta bueno
+      %a{ :id=> "back_to_root", :class=>"navbar-brand", :href=> root_path } #{t(:index_link)}
     %div{:class=> ["navbar-collapse", "collapse"]}
       %form{ :class=>["navbar-form", "navbar-right"], :role=>"form"}
         %div{ :class=>"form-group"}
-          %input{ :id=>"busca_router", :class=>"form-control", :type=>"search", :placeholder=>"Encontrá tu router"}
-        #lock_up_location{ :type=>"submit", :class=>"btn btn-info"} Podés buscar por direccion
+          %input{ :id=>"busca_router", :class=>"form-control", :type=>"search", :placeholder=>t(:nav_placeholder_search)}
+        #lock_up_location{ :type=>"submit", :class=>"btn btn-info"} #{t(:nav_btn_search)}
 
 #map
 
 #contextMenu{:class=>["dropdown", "clearfix"]}
   %ul{:class=>"dropdown-menu",:role=>"menu",:style=>"display:block;margin-bottom:5px;"}
     %li{:role=>"presentation"}
-      %a{ :id=>"new_node", :tabindex=>"-1", :role=>"menuitem", :href=> new_node_path }Compartir router
+      %a{ :id=>"new_node", :tabindex=>"-1", :role=>"menuitem", :href=> new_node_path } #{t (:share_action)}
     %li{:role=>"presentation"}
       %a{:tabindex=>"-1", :role=>"menuitem", :href=>"#"}Action
     %li{:role=>"presentation"}  
@@ -32,10 +32,9 @@
   %div{ :class=>"modal-dialog modal-sm"}
     #modal_content{ :class=>"modal-content"}
       #modal_header{ :class=>"modal-header"}
-        %h4{ :class=>"modal-title", :id=>"myModalLabel"}Node detail
+        %h4{ :class=>"modal-title", :id=>"myModalLabel"} #{t(:header_text)}
       #modal_content{ :class=>"modal-body"}
         #address
         #router
       #modal_footer{ :class=>"modal-footer"}
-        %button{ :type=>"button", :class=>"btn btn-info", :data => { :dismiss=>"modal" } }
-          Close
+        %button{ :type=>"button", :class=>"btn btn-info", :data => { :dismiss=>"modal" } } #{t(:btn_close)}
